# JniFFmpegLib

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni.cpp
app/src/main/cpp/command/: cmdutils.c  cmdutils.h  ffmpeg.h  ffmpeg_filter.c  ffmpeg_mod.c  ffmpeg_opt.c
app/src/main/cpp/ffmpeg/: call_ffmpeg.cpp  call_ffmpeg.h  excute_ffmpeg.cpp  excute_ffmpeg.h
app/src/main/cpp/include/compat/: os2threads.h  strtod.c  w32pthreads.h
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libavformat/: network.h  os_support.h  url.h
app/src/main/cpp/include/libavutil/: libm.h
app/src/main/java/jni/demo/com/jnidemo/: MainActivity.java
app/src/main/java/jni/demo/com/jnidemo/jni/: JniUtils.java
gradle/wrapper/: gradle-wrapper.properties
